--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,35 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Public Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.navbar {
+  background: linear-gradient(to right, #52ff01da,#0088ffdf);
+  box-shadow: 5px 5px 5px rgba(3, 3, 3, 0.3);
+}
+
+.category-aktif {
+  background-color:#479224;
+  color: white;
+}
+
+.btn-success {
+  background-color:#279027df;
+}
+@media only screen and (max-height: 1000px) {
+  .hasil {
+    height: 300px;
+  }
+  
+  .menu {
+    height: 530px;
+  }
+}
+
+.overflow-auto::-webkit-scrollbar{
+  display: none;
 }
 
 code {
